--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="prefers-color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark light">
     <link rel="icon" href="./images/favicon.ico" type="image/ico">
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./fonts/fonts.css">
@@ -112,19 +112,19 @@
         <h2 class="galery__header title-decor">А можно в картинках?</h2>
         <ul class="galery__list">
           <li class="galery__list-item">
-            <img class="galery__image" src="./images/sunset.png" alt="Закат"></img>
+            <img class="galery__image" src="./images/sunset.png" alt="Закат">
           </li>
           <li class="galery__list-item">
-            <img class="galery__image" src="./images/ice-cream.png" alt="Мороженное"></img>
+            <img class="galery__image" src="./images/ice-cream.png" alt="Мороженное">
           </li>
           <li class="galery__list-item">
-            <img class="galery__image" src="./images/tape.png" alt="Аудиокассета"></img>
+            <img class="galery__image" src="./images/tape.png" alt="Аудиокассета">
           </li>
           <li class="galery__list-item">
-            <img class="galery__image" src="./images/books.png" alt="Книги стопкой"></img>
+            <img class="galery__image" src="./images/books.png" alt="Книги стопкой">
           </li>
           <li class="galery__list-item">
-            <img class="galery__image" src="./images/street.png" alt="Улица"></img>
+            <img class="galery__image" src="./images/street.png" alt="Улица">
           </li>
         </ul>
       </section>
