--- a/index.html
+++ b/index.html
@@ -82,23 +82,23 @@
               <div class="grid-wrapper">
                 <h3 class="main-content__header title-decor">5 простых (на самом деле не очень) советов</h3>
                 <div class="questions__list-item-content">
-                  <h3 class="main-content__header title-decor font-weight-normal">Представьте небо и облака</h3>
+                  <h3 class="main-content__header title-decor main-content__subtitle">Представьте небо и облака</h3>
                   <p class="questions__list-item-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
                 </div>
                 <div class="questions__list-item-content">
-                  <h3 class="main-content__header title-decor font-weight-normal">Включите музыку</h3>
+                  <h3 class="main-content__header title-decor main-content__subtitle">Включите музыку</h3>
                   <p class="questions__list-item-text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
                 </div>
                 <div class="questions__list-item-content">
-                  <h3 class="main-content__header title-decor font-weight-normal">Прогуляйтесь</h3>
+                  <h3 class="main-content__header title-decor main-content__subtitle">Прогуляйтесь</h3>
                   <p class="questions__list-item-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="questions__list-item-link" href="#0">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
                 </div>
                 <div class="questions__list-item-content">
-                  <h3 class="main-content__header title-decor font-weight-normal">Хорошо ешьте</h3>
+                  <h3 class="main-content__header title-decor main-content__subtitle">Хорошо ешьте</h3>
                   <p class="questions__list-item-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
                 </div>
                 <div class="questions__list-item-content">
-                  <h3 class="main-content__header title-decor font-weight-normal">Читайте</h3>
+                  <h3 class="main-content__header title-decor main-content__subtitle">Читайте</h3>
                   <p class="questions__list-item-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
                 </div>
               </div>
